<resources>
    <string name="app_name">DigitalCardApplication</string>
    <string name="next">Next</string>
    <string name="add_multiple_services_with_services1_services2">Add multiple services with , (Services1, Services2... )</string>
    <string name="services">Services</string>
    <string name="service_info">Service Info</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="this_is_a_whatsapp_number">This is a Whatsapp Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_info">Contact Info</string>
    <string name="personal_info">Personal Info</string>
    <string name="full_name">Full Name</string>
    <string name="designation">Designation</string>
    <string name="company">Company</string>
    <string name="about_me">About Me</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="hello">Hello</string>
    <string name="content_font_style">Content Font Style</string>
    <string name="content_theme">Content Theme</string>
    <string name="header_theme">Header Theme</string>
    <string name="todo">TODO</string>
    <string name="hi_my_name_is_arti_chaudhary">Hi my name is arti chaudhary</string>
    <string name="contact">Contact</string>
    <string name="whatsapp">Whatsapp</string>
</resources>