<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainRelative"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cRelative"
        android:background="@color/teal_700"
        android:paddingBottom="20dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:src="@drawable/person"
            android:paddingTop="20dp"
            app:civ_border_color="@color/teal_700" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_pic"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="24sp"
            android:textStyle="normal" />

        <!-- TextView for user designation -->
        <TextView
            android:id="@+id/userDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/userName"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:paddingHorizontal="20dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textFontWeight="700"
            />

        <!-- TextView for user company -->
        <TextView
            android:id="@+id/userCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userDesignation"
            android:text="@string/this_is_a_whatsapp_number"
            android:textColor="@color/white"

            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textFontWeight="700"
            />





</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cRelative"
        android:background="@color/white"
        android:id="@+id/contentRelative"

        >
        <LinearLayout
            android:id="@+id/iconsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/callIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/call"
                android:contentDescription="@string/todo" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/messageIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/message"
                android:contentDescription="@string/todo" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/location"
                android:contentDescription="@string/todo" />


        </LinearLayout>
        <TextView
            android:id="@+id/userAboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconsLayout"
           android:textFontWeight="900"
            android:paddingHorizontal="20dp"
            android:text="@string/about_me"

            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userAboutMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userAboutMe"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/hi_my_name_is_arti_chaudhary"

            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userAboutMeText"
            android:layout_marginHorizontal="20dp"
            app:dividerColor="@color/material_dynamic_neutral70"
            app:dividerThickness="2dp" />

        <TextView
            android:id="@+id/userContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider4"

            android:textFontWeight="900"
            android:paddingHorizontal="20dp"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userContactText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userContact"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter"
            android:paddingHorizontal="20dp"
            android:text="@string/hi_my_name_is_arti_chaudhary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"
            android:id="@+id/divider5"
            app:dividerColor="@color/material_dynamic_neutral70"
            android:layout_below="@+id/userContactText"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/userWhatsApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider5"

            android:textFontWeight="900"
            android:paddingHorizontal="20dp"
            android:text="@string/whatsapp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userWhatsAppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userWhatsApp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter"
            android:paddingHorizontal="20dp"
            android:text="@string/hi_my_name_is_arti_chaudhary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"
            android:id="@+id/divider6"
            app:dividerColor="@color/material_dynamic_neutral70"
            android:layout_below="@+id/userWhatsAppText"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider6"

            android:paddingHorizontal="20dp"
            android:textFontWeight="900"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmail"
            android:layout_marginBottom="10dp"

            android:paddingHorizontal="20dp"
            android:text="@string/hi_my_name_is_arti_chaudhary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"
            android:id="@+id/divider7"
            app:dividerColor="@color/material_dynamic_neutral70"
            android:layout_below="@+id/userEmailText"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider7"

            android:paddingHorizontal="20dp"
            android:textFontWeight="900"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userAddress"
            android:layout_marginBottom="10dp"

            android:paddingHorizontal="20dp"
            android:text="@string/hi_my_name_is_arti_chaudhary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"
            android:id="@+id/divider8"
            app:dividerColor="@color/material_dynamic_neutral70"
            android:layout_below="@+id/userAddressText"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/userServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider8"

            android:paddingHorizontal="20dp"
            android:textFontWeight="900"
            android:text="@string/services"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/userServicesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userServices"
            android:layout_marginBottom="20dp"

            android:paddingHorizontal="20dp"
            android:text="@string/hi_my_name_is_arti_chaudhary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />
        />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userServices"
            android:paddingTop="10dp"
            android:id="@+id/editIconLayout"
            android:weightSum="2"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/downloadIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:src="@drawable/download"
                android:contentDescription="@string/todo" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="260dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:src="@drawable/edit"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
